	* Changed: Tabs are now cropped in javascript and use dynamically as much space as available. Removed template label cropping for tabs
	* Changed: Moved javascript object prototype definitions from core/lib/js/prototype.js to core/asset/js/prototypes.js
	* Changed: Session key is now the web path. Multiple todoyu instances on the same server have now different session namespaces
	* Added: Array.prototype.sum()


core 2.1.0 - 2011-06-17
	1. Note: Since release 2.1.0, the todoyu extension repository is enabling us to decouple version updates of the todoyu core and basic extensions from one another.
	Respectively, the core and extensions changelogs are now maintained separately.
	2. Upgrade instruction: When upgrading an existing todoyu installation to 2.1.0 please read the instructions in the file __UPGRADE_TODOYU___READ_THIS_FIRST.txt
	which you'll find in the todoyu root folder.

	* Feature: Added TodoyuMail objects which handles mail sending. Extendable by extensions
	* Feature: Added auto-growing behavior textareas and RTE areas
	* Feature: Added authentification with tokens to allow public data access interfacing
	* Feature: Changed popup behaviour. Multiple popups are handled correct now. Close with escape
	* Feature: Added method for creation of random named cache folders to TodoyuFileManager
	* Feature: Extended TodoyuFileManager::getFolderContents with option to retrieve file stats
	* Feature: Live validation of date/datetime fields
	* Feature: Added Todoyu::db()->setDeleted() wrapper method
	* Feature: Added TodoyuBaseObject::getCreatePersonID() and getCreatePerson() shortcut methods
	* Feature: Added array helper method that merges TodoyuArray::reform() and TodoyuArray::useFieldAsIndex() => TodoyuArray::reformWithFieldAsIndex()
	* Feature: Added check for items existence before applying hooked callbacks on items (Todoyu.Hooks.exec())